force-app/main/default/objects/pse__Forecast_Setup_Category__c/pse__Forecast_Setup_Category__c.object-meta.xml
<CustomObject>
    <description>This object stores details about the weighted forecast categories, such as Best Case or Expected, used in a forecast calculation. There must be at least one category assigned to the forecast setup details for a forecast calculation to run.</description>
    <label>Forecast Setup Category</label>
    <nameField>
        <displayFormat>FSetupCategory-{0000}</displayFormat>
        <label>Forecast Setup Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Setup Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>