force-app/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Forecast_Setup__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Setup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The forecast setup this forecast category is used with. You must configure at least one forecast category.</description>
    <inlineHelpText>The forecast setup this forecast category is used with. You must configure at least one forecast category.</inlineHelpText>
    <label>Forecast Setup</label>
    <referenceTo>pse__Forecast_Setup__c</referenceTo>
    <relationshipLabel>Forecast Setup Categories</relationshipLabel>
    <relationshipName>Forecast_Setup_Categories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>