force-app/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Label__c.field-meta.xml
<CustomField>
    <fullName>pse__Label__c</fullName>
    <description>The label displayed for a weighted forecast category, for example, Expected, Best Case, Worst Case.</description>
    <inlineHelpText>The label displayed for a weighted forecast category, for example, Expected, Best Case, Worst Case.</inlineHelpText>
    <label>Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>