force-app/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Ordinal__c.field-meta.xml
<CustomField>
    <fullName>pse__Ordinal__c</fullName>
    <description>This field is deprecated.</description>
    <inlineHelpText>The order the forecast categories are applied in the forecast calculation. You can enter values from 1 to 3.</inlineHelpText>
    <label>zDeprecated:Category Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>